--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:supportsPictureInPicture="true"
+            android:screenOrientation="landscape"
             android:configChanges="orientation|screenLayout|screenSize|smallestScreenSize"
             android:label="@string/app_name"
             android:theme="@style/Theme.PIPModeCompose">
